; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/bridge/synopsys/extr_dw-mipi-dsi.c_dw_mipi_dsi_bind.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/bridge/synopsys/extr_dw-mipi-dsi.c_dw_mipi_dsi_bind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dw_mipi_dsi = type { i32 }
%struct.drm_encoder = type { i32 }

@.str = private unnamed_addr constant [38 x i8] c"Failed to initialize bridge with drm\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dw_mipi_dsi_bind(%struct.dw_mipi_dsi* %0, %struct.drm_encoder* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.dw_mipi_dsi*, align 8
  %5 = alloca %struct.drm_encoder*, align 8
  %6 = alloca i32, align 4
  store %struct.dw_mipi_dsi* %0, %struct.dw_mipi_dsi** %4, align 8
  store %struct.drm_encoder* %1, %struct.drm_encoder** %5, align 8
  %7 = load %struct.drm_encoder*, %struct.drm_encoder** %5, align 8
  %8 = load %struct.dw_mipi_dsi*, %struct.dw_mipi_dsi** %4, align 8
  %9 = getelementptr inbounds %struct.dw_mipi_dsi, %struct.dw_mipi_dsi* %8, i32 0, i32 0
  %10 = call i32 @drm_bridge_attach(%struct.drm_encoder* %7, i32* %9, i32* null)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %15 = load i32, i32* %6, align 4
  store i32 %15, i32* %3, align 4
  br label %18

16:                                               ; preds = %2
  %17 = load i32, i32* %6, align 4
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %16, %13
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @drm_bridge_attach(%struct.drm_encoder*, i32*, i32*) #1

declare dso_local i32 @DRM_ERROR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
